--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-[#343a40]">
+  <body class="bg-[#D4F1F4]">
     <div id="app"></div>
     <script type="module" src="index.js"></script>
   </body>
