--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>My Parcel App</title>
-    <link href="./index.css" rel="stylesheet" />
+    <title> Shop Nearby</title>
+    <link href="index.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="../assets/icon.png">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
